Added SHOP database functions and testing files

--- a/.gitignore
+++ b/.gitignore
@@ -1,18 +1,33 @@
 *~
-*.FASL
+pzmq-shop3*
+pom.xml
+pom.xml.asc
+*.jar
+*.class
 *.fasl
-*.lisp-temp
-*.dfsl
-*.pfsl
-*.d64fsl
-*.p64fsl
-*.lx64fsl
-*.lx32fsl
-*.dx64fsl
-*.dx32fsl
-*.fx64fsl
-*.fx32fsl
-*.sx64fsl
-*.sx32fsl
-*.wx64fsl
-*.wx32fsl
+/lib/
+/classes/
+/target/
+/checkouts/
+.nrepl-port
+.cpcache/
+.clj-kondo/inline-configs
+.clj-kondo/.cache
+.clj-kondo/.lock
+.clj-kondo/babashka
+.clj-kondo/com.fulcrologic
+.clj-kondo/cnuernber
+.clj-kondo/com.wsscode
+.clj-kondo/funcool
+.clj-kondo/lilactown
+.clj-kondo/metosin
+.clj-kondo/rewrite-clj
+.clj-kondo/taoensso
+.lsp/.cache
+resources/js
+public/js
+
+node_modules/
+.shadow-cljs/
+node_modules/
+resources/public/js/
